# suzieq

./: .bashrc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-demo  Dockerfile-sqbase  Node.py  Pipfile  README.md  VERSION  build-docker.sh  docker-compose.yml  front-end-init.py  gen_schema.py  ipnetwork_array.py  ipython-initfile.py  kafka2pq.py  kafka2spark.py  livyinit.py  livylib.py  local.yml  main.py  mkdocs.yml  node.py  pdutils.py  poller.md  prelim.md  purge-old-cntrs.py  pyproject.toml  pytest.ini  service.py  setup.cfg  (+10 more)
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  documentation_change.yaml  feature_request.md  feature_request.yaml  housekeeping.yaml
.github/workflows/: codeql-analysis.yml  integration-tests.yml  linting.yml  pre-commit.yml
cli/: Untitled.ipynb  basicobj.py  interface.py  lldp.py  nubia_sq_context.py  nubia_sq_plugin.py  nubia_sq_statusbar.py  ospf.py  sq_nubia_context.py  sq_nubia_plugin.py  sq_nubia_statusbar.py  suzieq-cli  system.py  tables.py  tracep.py
cli/commands/: __init__.py  analyze_commands.py  assert_commands.py  bgpCmd.py  command.py  context_commands.py  interfaceCmd.py  lldpCmd.py  ospfCmd.py  query_command.py  show_commands.py  systemCmd.py  tablesCmd.py  topcpuCmd.py  topmemCmd.py  utils.py
cli/sqcmds/: __init__.py  addrCmd.py  arpndCmd.py  bgpCmd.py  command.py  context_commands.py  evpnVniCmd.py  interfaceCmd.py  lldpCmd.py  macsCmd.py  mlagCmd.py  ospfCmd.py  routesCmd.py  systemCmd.py  tablesCmd.py  topcpuCmd.py  topmemCmd.py
config/: arpnd.yml  bgp.yml  clag.yml  device.yml  evpnVni.yml  evpn_vni.yml  fdb.yml  fs.yml  ifCounters.yml  interfaces.yml  lldp.yml  macs.yml  memory.yml  mlag.yml  ospfIf.yml  ospfNbr.yml  ospfif.yml  ospfnbr.yml  routes.yml  system.yml  time.yml  topcpu.yml  topmem.yml  vlan.yml
config/schema/: address.avsc  arpnd.avsc  bgp.avsc  device.avsc  evpnVni.avsc  fdb.avsc  fs.avsc  ifCounters.avsc  interfaces.avsc  lldp.avsc  macs.avsc  memory.avsc  mlag.avsc  ospf.avsc  ospfIf.avsc  ospfNbr.avsc  path.avsc  routes.avsc  sq-poller.avsc  sqCoalescer.avsc  sqPoller.avsc  system.avsc  time.avsc  topcpu.avsc  topmem.avsc  vlan.avsc
config/textfsm_templates/: cl_interfaces.tfsm  cl_meminfo.tfsm  cl_showsys.tfsm  cl_top.tfsm  eos_ospfif.tfsm  eos_ospfnbr.tfsm  eos_show_bgp_nbr.tfsm  eos_showclock.tfsm  eos_vlan.tfsm  frr_ospfif.tfsm  frr_ospfnbr.tfsm  frr_ospfnbr_brief.tfsm  fs.tfsm  ifCounters.tfsm  iosxr_show_arp.tfsm  iosxr_show_bgp_neigh.tfsm  iosxr_show_bgp_summ.tfsm  iosxr_show_clock.tfsm  iosxr_show_fs.tfsm  iosxr_show_int.tfsm  iosxr_show_ip_int.tfsm  iosxr_show_ipv6_neigh.tfsm  iosxr_show_lldp_neigh.tfsm  iosxr_show_route.tfsm  iosxr_show_version.tfsm  junos_vpls_mac.tfsm  linux_fdb.tfsm  linux_ipaddr.tfsm  linux_ipneigh.tfsm  linux_routes.tfsm  linux_showsys.tfsm  linux_top.tfsm  linux_topproc.tfsm  linux_vlan.tfsm  lldpd.tfsm  nxos_if_fabric.tfsm  nxos_show_int_grep.tfsm  sonic_mclag_dump_state.tfsm  sonic_show_version.tfsm  system.tfsm  (+1 more)
docs/: 2020-priority.md  2020-roadmap.md  How-suzieq-works.md  TODO  analyzer.md  architecture.md  config_file.md  getting_started.md  gui.md  hosts-file-format.md  hosts-template.md  hosts-template.yml  index.md  inventory.md  pandas-query-examples.md  pandas-snippets.txt  panos-support.md  poller.md  q-to-ask.rst  rate-limiting-AAA.md  release-notes.md  remote-cli.md  requirements.txt  rest-server.md  service-format.md  simnode.md  sql-saves.txt  tables.md  time.md  transports.md
docs/api/: sqobjects.md
docs/commands/: introduction.md
docs/developer/: adding-a-new-nos.md  adding-objects.md  augmented-columns.md  contribute.md  devstart.md  integration-tests.md  pythonAPI.md  release-checklist.md  rest-server.md  schema_evolution.md  tags.md  testing.md  updating_test_data.md
docs/service/: service-format.md
docs/tutorials/: 10things.md  how_to_think_about_verbs.md
engines/: __init__.py  base_engine.py  engine.py  pandas_engine.py
engines/modin/: addr.py  arpnd.py  engine.py  engineobj.py  interfaces.py  lldp.py  ospf.py
engines/pandas/: addr.py  bgp.py  engine.py  engineobj.py  evpnVni.py  interfaces.py  ospf.py  routes.py  system.py  topcpu.py
engines/spark/: engine.py  engineobj.py  interfaces.py  ospf.py  topmem.py
oldcli/: nubia_sq_plugin.py
oldcli/commands/: query_command.py
samples/: Caddyfile  docker-compose.yml  inventory.yml  suzieq-cfg.yml
sqobjects/: __init__.py  addr.py  arpnd.py  basicobj.py  bgp.py  interface.py  interfaces.py  lldp.py  macs.py  mlag.py  ospf.py  routes.py  system.py  tables.py  topcpu.py  topmem.py  tracepath.py  vlan.py
sqpoller-output/: arpnd.output  bgp.output  device.output  ifCounters.output  igmp.output  interfaces.output  inventory.output  lldp.output  macs.output  mlag.output  mroutes.output  ospfIf.output  ospfNbr.output  routes.output  time.output  vlan.output
suzieq/: exceptions.py  gen_schema.py  genhosts.py  ipnetwork_array.py  ipython-initfile.py  livylib.py  local.yml  purge-old-cntrs.py  service.py  sq-agent.py  sq-collector.py  sq-poller.py  suzieq-fe.py  tips.txt  utils.py  version.py  writer.py
suzieq/cli/: Untitled.ipynb  nubia_patch.py  sq_cli.py  sq_nubia_context.py  (+3 more)
tests/: README.md  conftest.py  testfilter.py  testsvc.py  testtfsm.py
(+2329 files in other folders)
