[tool.poetry]
name = "suzieq"
version = "0.9"
description = ""
authors = ["Dinesh G Dutt", "Justin Pietsch"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "==3.6.2"
asyncssh = "==2.4.2"
textfsm = "*"
async-timeout = "*"
aiofiles = "*"
prompt-toolkit = ">2"
pyarrow = "*"
pandas = "1.1.4"
PyYAML = "*"
python-nubia = "0.2b5"
uvloop = "*"
networkx = "^2.4"
matplotlib = "^3.2.2"
faker = "^4.1.1"
netconan = "^0.11.2"
jsonpath-ng = "^1.5.1"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
tabulate = "^0.8.7"
streamlit = "^0.72.0"
graphviz = "^0.15"
dateparser = "^1.0.0"
fido2 = "^0.9.1"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pylint = "*"
autopep8 = "*"
rope = "*"
jedi = "~0.17.2"
flake8 = "*"
ipdb = "*"
pycscope = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-asyncio = "*"
pytest-mock = "*"
mock = "*"
pytest-depends = "^1.0.1"
bandit = "^1.6.2"
pytest-icdiff = "^0.5"
ipython = "~=7.15.0"
requests = "^2.24.0"
sphinx-autodoc-typehints = "^1.11.1"
filelock = "^3.0.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
